@@ -1,0 +1,9 @@
+#ifndef __MAINTAINER__H__
+#define __MAINTAINER__H__
+
+#define PRIMARY_MAINTAINER "Harri Porten"
+#define PRIMARY_MAINTAINER_MAIL "<porten@kde.org>"
+#define SECONDARY_MAINTAINER "Mario Weilguni"
+#define SECONDARY_MAINTAINER_MAIL "<mweilguni@kde.org>"
+
+#endif
