@@ -1,2 +1,2 @@
-#define KPPPVERSION "1.3.11"
+#define KPPPVERSION "1.3.12"
 
