@@ -1,3 +1,8 @@
+1998-08-19  Mario Weilguni <mweilguni@kde.org>
+	
+	* added function to create a ppp - log
+	* connect speed improvements
+
 1998-08-18  Harri Porten  <porten@kde.org>
 
 	* fixed security leak in execute_command(): drop setgid root and
